--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-
+<h1>Hello from phonegap</h1>
 <div class='header'><h1>Home</h1></div>
 <div class='search-view'>
 <input class='search-key' type="text"/>
